# nip41-proto0

./: .gitignore  Cargo.toml  LICENSE  README.md  run_sample.sh
.github/workflows/: linux-ci.yml
src/: keys.rs  main.rs  nostr.rs  persist.rs
