[package]
name = "nip41-proto0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = "0.5.0"
bip39 = "2.0.0"
hex = "0.4.3"
nostr = "0.20.0"
nostr-sdk = "0.20.1"
rand = "0.8.5"
secp256k1 = { version = "0.27.0", features = ["rand", "bitcoin-hashes"]}
thiserror = "1.0.40"
tokio = "1.27.0"
